# auto

./: README.md  config.json  file_history.json  upload_sessions.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  config.rs  discord_bot.rs  download.rs  lib.rs  main.rs  state.rs  storage.rs  telegram.rs  upload.rs  zip_utils.rs
static/: index.html
