[package]
name    = "discord-drive"
version = "0.1.0"
edition = "2021"

[lib]
name       = "discord_drive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "discord-drive"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }

# Async runtime
tokio  = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP server
axum             = { version = "0.7", features = ["multipart"] }
tower            = "0.4"
tower-http       = { version = "0.5", features = ["fs", "cors", "trace"] }
axum-extra       = { version = "0.9", features = ["typed-header"] }
tokio-util       = { version = "0.7", features = ["io", "codec"] }
bytes            = "1"

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Discord bot
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "model", "cache",
    "rustls_backend",
] }

# HTTP client (Telegram CDN downloads)
reqwest = { version = "0.12", default-features = false, features = [
    "json", "multipart", "stream", "rustls-tls",
] }

# Utilities
anyhow    = "1"
chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1",   features = ["v4"] }
md5       = "0.7"
dotenvy   = "0.15"
once_cell = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-stream = "0.3"

# ZIP & image
zip   = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# OS specific (Windows: hide console window)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
